@@ -1,6 +1,7 @@
 0.8:
   fix pipelining bug
   send all HTTP headers als HTTP_FOO=bar environment to CGIs
+  gcc 4 unsigned char* <-> char* cleanups
 
 0.7:
   use the new scan_urlencoded2 (libowfat cvs); properly serve
